@@ -1,3 +1,6 @@
+2011-09-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Fix error when a xmf file is missing when removing (ticket #101).
+
 2011-09-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Workaround module unloading issue when a node is router and
 	client (ticket #99).
